Adicionados os arquivos main.css e main.js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="main.css">
+
+    <!-- Javascript -->
+    <script src="main.js"></script>
+    
     <title>Portifólio - PAULO HENRIQUE DE OLIVEIRA</title>
 </head>
 <body>
