Atualizando os links para teste

--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
             <h1>Redes Sociais</h1>
             <div>
                 <ul class="list-group">
-                    <li class="list-group-item bg-primary bg-gradient text-white">LinkedIn</li>
-                    <li class="list-group-item bg-primary bg-gradient text-white">Trailhead Salesforce</li>
+                    
+                    <li class="list-group-item bg-primary bg-gradient text-white">
+                        <a href="https://www.linkedin.com/in/paulo-henrique-oliveira-b8962649/">LinkedIn</a>
+                    </li>
+                    <li class="list-group-item bg-primary bg-gradient text-white">
+                        <a href="https://www.salesforce.com/trailblazer/paulo0794">Trailhead Salesforce</a>
+                    </li>
                 </ul>
             </div>
           </div>
