--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <ul class="list-group">
                     
                     <li class="list-group-item bg-primary bg-gradient text-white">
-                        <a href="https://www.linkedin.com/in/paulo-henrique-oliveira-b8962649/">LinkedIn</a>
+                        <a class="text-white" href="https://www.linkedin.com/in/paulo-henrique-oliveira-b8962649/">LinkedIn</a>
                     </li>
                     <li class="list-group-item bg-primary bg-gradient text-white">
-                        <a href="https://www.salesforce.com/trailblazer/paulo0794">Trailhead Salesforce</a>
+                        <a class="text-white" href="https://www.salesforce.com/trailblazer/paulo0794">Trailhead Salesforce</a>
                     </li>
                 </ul>
             </div>
