--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
           </div>
           <div class="col">
-            <h1>Tenologias</h1>
+            <h1>Tecnologias</h1>
             <div>
                 <ul class="list-group">
                     <li class="list-group-item bg-danger bg-gradient text-white">HTML</li>
@@ -61,8 +61,8 @@
             <h1>Formação</h1>
             <div>
                 <ul class="list-group">
-                    <li class="list-group-item bg-warning bg-gradient text-white">Tecnologia em Análise e Desencolvimento de Sistemas</li>
-                    <li class="list-group-item bg-warning bg-gradient text-white">Técnico em Desencolvimento de Sistemas</li>
+                    <li class="list-group-item bg-warning bg-gradient text-white">Tecnologia em Análise e Desenvolvimento de Sistemas</li>
+                    <li class="list-group-item bg-warning bg-gradient text-white">Técnico em Desenvolvimento de Sistemas</li>
                 </ul>
             </div>
           </div>
